vps/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: php-helloworld-svc
spec:
  # ClusterIP + Ingress (см. ingress.yaml) - трафик снаружи принимает Traefik,
  # который k3s ставит и запускает по умолчанию на портах 80/443 самой VPS.
  type: ClusterIP
  selector:
    app: php-helloworld
  ports:
    - port: 80
      targetPort: 80
